# AAPaperJetAnalysis

./: CMakeLists.txt
config/: atlas_5tev_ffpt.xml  atlas_5tev_ffpt0.xml  atlas_5tev_ffpt1.xml  atlas_5tev_ffpt2.xml  atlas_5tev_ffz.xml  atlas_5tev_ffz0.xml  atlas_5tev_ffz1.xml  atlas_5tev_ffz2.xml  cms_5tev_jetshape.xml  cms_5tev_jetshape_sub.xml  cms_5tev_jetshape_sub_nocut.xml  jetanalysis_test.xml  test.xml  test_jetshape_sub.xml
config/cms_5tev_jetshape_set/: cms_5tev_jetshape_0.xml  cms_5tev_jetshape_1.xml  cms_5tev_jetshape_2.xml  cms_5tev_jetshape_3.xml  cms_5tev_jetshape_4.xml  cms_5tev_jetshape_5.xml  cms_5tev_jetshape_6.xml  cms_5tev_jetshape_7.xml  cms_5tev_jetshape_8.xml  cms_5tev_jetshape_combine.xml
config/fragf/: atlas_5tev_ffpt0.xml  atlas_5tev_ffpt1.xml  atlas_5tev_ffpt2.xml  atlas_5tev_ffz0.xml  atlas_5tev_jet.xml
config/jetshape/: cms_5tev_jetshape.xml  cms_5tev_jetshape_full_neg.xml  cms_5tev_jetshape_full_no_neg.xml  cms_5tev_jetshape_low_reso.xml  cms_5tev_jetshape_neg.xml  cms_5tev_jetshape_no_neg.xml  cms_5tev_jetshape_no_sideband.xml  cms_5tev_jetshape_no_sideband_neg.xml  cms_5tev_jetshape_no_sideband_no_neg.xml  cms_5tev_jetshape_parton.xml
config/jetshape/RawJetshape/: cms_5tev_jetshape.xml
config/jetshape/RawJetshape/cms_5tev_jetshape_set/: cms_5tev_jetshape_1.xml  cms_5tev_jetshape_2.xml  cms_5tev_jetshape_3.xml  cms_5tev_jetshape_7.xml
exp_data/: get_data.py  hepdata_list.yaml  load_hepdata_yaml.py
exp_data/atlas_5tev_ffpt/: raa_Dpt_0-10_158-200_0-0.3.txt  raa_Dpt_30-40_158-200_0-0.3.txt
exp_data/cms_5tev_jet_shape/: raa_jet_shape_30-50_2R0.txt~
fjcore/: CMakeCache.txt  fjcore.cc  fjcore.hh
gen_plot/: 2DHist.ipynb  cms_5tev_jet_shape.ipynb  ffpt.ipynb  ffpt2.ipynb  ffz2.ipynb  histoPbPb.ipynb  histopp.ipynb  jetshape2.ipynb  jetshape_mpi_off_pp.ipynb  jetshape_negatives.ipynb  sideband.ipynb
gen_plot/.ipynb_checkpoints/: cms_5tev_jet_shape-checkpoint.ipynb
gen_raa/: get_raa.py
job_sub/: gen_slurm_sub.py  slurm_sub.py
src/: AnalyzeBase.cc  AnalyzeBase.h  AnalyzeEvents.cc  AnalyzeEvents.h  CMakeLists.txt  CombineBase.cc  CombineBase.h  CombineEvents.cc  CombineEvents.h  CombineFfPt.cc  CombineFfPt.h  CombineFfZ.cc  CombineFfZ.h  CombineHadSpec.cc  CombineHadSpec.h  CombineJetShape.cc  CombineJetShape.h  CombineJetShapeSub.cc  CombineJetShapeSub.h  CombineJetSpec.cc  CombineJetSpec.h  FfPt.cc  FfPt.h  FfZ.cc  FfZ.h  HadSpec.cc  HadSpec.h  Hist1D.cc  Hist1D.h  Hist2D.cc  Hist2D.h  Histogram.cc  Histogram.h  JetAnalysis.cc  JetAnalysis.h  JetShape.cc  JetShape.h  JetShapeSub.cc  JetShapeSub.h  JetSpec.cc  (+16 more)
